leptos_macro/tests/view/09_generic_prop_wrong_type.stderr
error[E0277]: expected a `Fn()` closure, found `bool`
  --> tests/view/09_generic_prop_wrong_type.rs:12:14
   |
12 |             <Inner concrete_i32=42 generic_fun=true>
   |              ^^^^^ expected an `Fn()` closure, found `bool`
   |
   = help: the trait `Fn()` is not implemented for `bool`
   = note: wrap the `bool` in a closure with no arguments: `|| { /* code */ }`
note: required by a bound in `Inner`
  --> tests/view/09_generic_prop_wrong_type.rs:26:8
   |
20 | fn Inner<F>(
   |    ----- required by a bound in this function
...
26 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^ required by this bound in `Inner`

error[E0599]: the method `__check_generic_fun` exists for struct `InnerProps<bool>`, but its trait bounds were not satisfied
  --> tests/view/09_generic_prop_wrong_type.rs:12:48
   |
12 |             <Inner concrete_i32=42 generic_fun=true>
   |                                                ^^^^ method cannot be called on `InnerProps<bool>` due to unsatisfied trait bounds
...
19 | #[component]
   | ------------ method `__check_generic_fun` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/09_generic_prop_wrong_type.rs:26:8
   |
19 | #[component]
   | ------------
...
26 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
